--- a/.gitignore
+++ b/.gitignore
@@ -1,89 +1,43 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+import graphics
+from ghost_support import *
+import string
+from random import seed, shuffle
+import random
 
-# C extensions
-*.so
 
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
+def readfile(File_name):
+    infile = open(File_name, "wordlist_short")
+    filetext = infile.read().splitlines()
+    infile.close()
+    for letter in string.ascii_uppercase:
+        letters_text = infile.read().splitlines()
+def main():
+    File_name = input("Enter a dictionary filename: ")
+    Letters = readfile(File_name)
+    print('Frequency of each letter:')
+    for letter in string.ascii_uppercase:
+        print(letter + ':' + Letters)
+    Answer =input("Would you like to play a nice game of Ghost Word? ")
+    Answer.lower()
+    while (Answer != 'n' or 'y'):
+        Answer = input('Would you like to play a nice game of Ghost Word? ')
+        if Answer == 'n':
+            print ('Have a super awesome day, friend!')
+            sys.exit(1)
+        if Answer == 'y':
+            BOARD_WIDTH = 675
+            BOARD_HEIGHT = 675
+            window = GraphWin('Word Game', BOARD_WIDTH, BOARD_HEIGHT)
+            window.setBackground('Lightgreen')
+            center = Point(675/2, 100)  # create a point to serve as the center of the circle
+            radius = 100
+            circle = Circle(center, radius)  # create a circle centered at "center" with radius "radius"
+            circle.setOutline('black')
+            circle.draw(window)
+            line = Point(200, 300)
+            line.setOutline('black')
+            line.draw(window)
+            window.getMouse()
+            print("Hint:")
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*,cover
-.hypothesis/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# IPython Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# dotenv
-.env
-
-# virtualenv
-venv/
-ENV/
-
-# Spyder project settings
-.spyderproject
-
-# Rope project settings
-.ropeproject
+main()
